Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-112200

Possible memory leak with Fusion style

    XMLWordPrintable

Details

    • Linux/X11
    • 362b5b842 (dev), 6ab0d25a0 (dev), 238c30a4a (6.5), 4ca7e6d15 (6.5), 010b9adb9 (6.6), e6fb3b4ea (6.6), 09b46a9f3 (tqtc/lts-6.2), 1f1dbb363 (tqtc/lts-5.15), c2bcba93a (dev), 566442408 (dev), b74ef9ee4 (dev), aa8e8e94b (dev), 8fc75044a (6.5), 809f735bf (6.5)
    • Foundation Sprint 83, Foundation Sprint 84

    Description

      Attached is the example which when runs for hours memory leak tool "heaptrack" and 'Top' shows large memory leak.

      attached is the example and result of the memory leak tool.

       

      Attachments

        1. valgrind-massif.zip
          803 kB
        2. mainwindow.log
          21 kB
        3. QFusionStyle_drawControl.png
          QFusionStyle_drawControl.png
          847 kB
        4. QFusionStyle_drawPrimitive.png
          QFusionStyle_drawPrimitive.png
          862 kB
        5. mainwindow_qt6.zip
          1.03 MB

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              mmutz Marc Mutz
              irfan.omair@digia.com Irfan Omair
              Vladimir Minenko Vladimir Minenko
              Alex Blasche Alex Blasche
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes